asset/css/index.css
/* ... */
#blob {
    overflow: hidden;
    display: inline-block;
    z-index: -2;
    top: 0;
    position: absolute;
    background-color: var(--main-color);
    height: 750px;
    aspect-ratio: 1;
    left: 50%;
    top: 50%;
    translate: -50% -50%;
    border-radius: 50%;
    animation: rotate 20s infinite;
    background: linear-gradient(to right,
            rgb(255, 79, 79),
            var(--highlight-color));
}

@keyframes rotate {
    from {
        rotate: 0deg;
    }

    50% {
        scale: 1 1.5;
    }

    to {
        rotate: 360deg;
    }
}
/* Google translate */
.fixed-con {
    z-index: 9724790009779558!important;
    background-color: #0033ff;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow-y: auto;
  }
  .VIpgJd-ZVi9od-aZ2wEe-wOHMyf{
   z-index: 9724790009779!important;
   top:0;
   left:unset;
   right:-5px;
   display:none!important;
   border-radius:50%;
   border:2px solid gold;
  }
  .VIpgJd-ZVi9od-aZ2wEe-OiiCO{
    width:80px;
    height:80px;
  }
  /*hide google translate link | logo | banner-frame */
  .goog-logo-link,.gskiptranslate,.goog-te-gadget span,.goog-te-banner-frame,#goog-gt-tt, .goog-te-balloon-frame,div#goog-gt-, .goog-te-menu-value span{
    display: none!important;
  }
  .goog-te-gadget-simple{
    background-color:transparent;
    border:2px solid #eee;
    border-radius:5px;
    padding:5px 10px;
    box-shadow:0 2px 10px -7px rgba(0,0,0,0.2);
    font-size:0px;
}
  .goog-te-gadget {
    font-family: 'Quicksand', sans-serif !important;
    color: transparent!important;
    font-size:0px !important;
  }
  .goog-te-gadget-simple:before{
    content:'Language';
    font-size:12px;
  }
  .goog-text-highlight {
    background: none !important;
    box-shadow: none !important;
  }
  #google_translate_element .goog-te-gadget-simple .goog-te-menu-value span:first-child{display: none;}
  #google_translate_element .goog-te-gadget-simple .goog-te-menu-value:before{content: 'Translate'}
   
 /*google translate Dropdown */
 
 #google_translate_element select{
 background: var(--text-color);
 color: var(--bg-color);
 border: 1px solid transparent;
 border-radius:1rem;
 padding:0.5rem 1rem; 
font-size:  1.5rem;

 }

/* NAV */
nav{
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    justify-content: space-between;
}
.login-text{
    color: var(--main-color);
    position: relative;
    top: 50px;
    display: flex;
    justify-content: center;
    align-items: center;

}
.login-text a {
    font-size: 1rem;
    font-weight: 600;
    color: var(--main-color);
}
.logo{
    position: relative;
    right: 50px;
    top: 50px;
    background-position: left;
    background-repeat: no-repeat;
    background-size: cover;
    height: 50px;
    aspect-ratio: 1.1;
}
#menuToggle {
    display: block;
    position: relative;
    top: 50px;
    left: 50px;
    z-index: 1;
    -webkit-user-select: none;
    user-select: none;
}

#menuToggle a {
    text-decoration: none;
    color: var(--bg-color);
    transition: color 0.3s ease;
}

#menuToggle a:hover {
    color: var(--highlight-color);
}


#menuToggle input {
    display: block;
    width: 40px;
    height: 32px;
    position: absolute;
    top: -7px;
    left: -5px;

    cursor: pointer;

    opacity: 0;
    z-index: 2;

    -webkit-touch-callout: none;
}

/*
 * Just a quick hamburger
 */
#menuToggle span {
    display: block;
    width: 33px;
    height: 4px;
    margin-bottom: 5px;
    position: relative;

    background: var(--text-color);
    border-radius: 3px;

    z-index: 1;

    transform-origin: 4px 0px;

    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
        opacity 0.55s ease;
}

#menuToggle span:first-child {
    transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2) {
    transform-origin: 0% 100%;
}


#menuToggle input:checked~span {
    opacity: 1;
    transform: rotate(45deg) translate(-2px, -1px);
    background: var(--bg-color);
}

#menuToggle input:checked~span:nth-last-child(3) {
    opacity: 0;
    transform: rotate(0deg) scale(0.2, 0.2);
}

#menuToggle input:checked~span:nth-last-child(2) {
    transform: rotate(-45deg) translate(0, -1px);
}

#menu {
    position: absolute;
    width: 300px;
    height: 100vh;
    margin: -100px 0 0 -50px;
    padding: 50px;
    padding-top: 125px;

    background: var(--text-color);
    list-style-type: none;
    -webkit-font-smoothing: antialiased;
    /* to stop flickering of text in safari */

    transform-origin: 0% 0%;
    transform: translate(-100%, 0);

    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
}

#menu li {
    padding: 10px 0;
    font-size: 22px;
}

#menuToggle input:checked~ul {
    transform: none;
}
@media screen and (max-width: 900px){
    .big {
            font-size: 4rem;
            padding: 1rem 2rem;
        }
    
        .medium {
            font-size: 2rem;
            padding: 0.5rem 2rem;
        }
        .small {
            font-size: 1rem;
            padding: 0.5rem 2rem;
        }
        #blob {
            height: 500px;
        }
        .login-text{
            display: none;
        }
}
/* Digital Dreams Section */

.dd__background {
    height: max-content;
    width: 100vw;
    background-color: var(--bg-color);
    padding: 4rem 0;
    padding-left: 6rem;
}
.dd__ux{
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    padding: 0 4rem;
}
.arrow{
    color: var(--text-color);
    transition: 0.3s ease-in-out;
}
.arrow:hover{
    filter: brightness(200%);
    scale: 1.2;
}
.dd__background h1{
    font-size: 4rem;
    color: var(--text-color);
    text-align: left;
}
.dd__background p{
    text-align: justify;
    font-size: 1rem;
    max-width: 70ch;
    color: var(--text-color);
    padding: 0rem 2rem 0rem 0rem;
}
/* ... */

